--- a/repositorio/templates/repositorio/upload_imagem.html
+++ b/repositorio/templates/repositorio/upload_imagem.html
@@ -27,7 +27,7 @@
                 Selecione uma ou mais imagens em alta resolução. O sistema fará o upload e processará as miniaturas em segundo plano.
             </p>
 
-            <form method="post" enctype="multipart/form-data" id="upload-form">
+            <form id="upload-form">
                 {% csrf_token %}
 
                 <div class="form-group mb-4" id="id_arquivos_group">
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="text-center mt-3">
-                    <button type="submit" class="btn btn-primary btn-lg" id="submit-button" disabled>
+                    <button type="button" class="btn btn-primary btn-lg" id="submit-button" disabled>
                         <i class="fas fa-upload mr-1"></i> Iniciar Upload
                     </button>
                 </div>
@@ -68,5 +68,5 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="{% static 'js/repositorio/upload_imagem.js' %}"></script>
+<script src="{% static 'repositorio/js/upload_imagem.js' %}"></script>
 {% endblock %}
